# booksLib

./: CMakeLists.txt  README.md  main.cpp
source/: books.cpp  books.hpp  func_to_test.cpp  main.cpp  test.cpp
